--- a/cloudstreamtest-producer/build.gradle
+++ b/cloudstreamtest-producer/build.gradle
@@ -19,7 +19,7 @@ ext {
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
     compile group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: springCloudVersion
-    compile ('org.springframework.cloud:spring-cloud-stream:3.0.8.RELEASE:test-binder')
+    compile ('org.springframework.cloud:spring-cloud-stream:${springCloudVersion}:test-binder')
     compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: springCloudVersion
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
