Changed producing strategy from uuid generation to a rest endpoint where a string can be posted to trigger a producing event.

--- a/cloudstreamtest-producer/build.gradle
+++ b/cloudstreamtest-producer/build.gradle
@@ -18,6 +18,7 @@ ext {
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     compile group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: springCloudVersion
     compile ('org.springframework.cloud:spring-cloud-stream:${springCloudVersion}:test-binder')
     compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: springCloudVersion
